# simuthermique

./: .gitignore  README.md  SimuThermiqueSolver_src.jl  get_weatherdata.py  index.html  maths.ipynb  notes.md  params.json  pyproject.toml  run_model_with_weather.ipynb  solve_wall.ipynb  solver_python.py  with_weatherdata.ipynb
app_num/: parois.py  sol.py
data/: weatherdata_2019-08-11_10days.pck
data_logger/: emoncms_API.ipynb  readrawdata.py
doc/: simple_thermal_solver.adoc
doc_src/: doc_solver.adoc  pandoc.yaml
docs/: README.html  README.md  _config.yml  index.html  pandoc.yaml  styling.css
emoncms_data/: test_readrawdata.ipynb
examples/: example_material.py  example_solar_collector.py  home.ipynb  model.yaml  simple_2.py  simple_solver_python.py
mars2020/: MCMC_001.ipynb  run_model_123.ipynb  temperature_emonCMS_7clem_032020.csv
pythsolver/: README.md  __init__.py  graphmodel.py  solver_python.py  test_solver_python.ipynb  test_solver_python.py  types.py
rc5_templogger/: README.md  cuisine_ete_info.csv  data_grenier.csv  graph01.vega  grdpiece_hifi.csv  grenier_info.csv
research/: SimuThermiqueSolver.jl  api_draft.ipynb  api_v01.ipynb  api_v01.jl  cloud_cover_factor.ipynb  simuthermique_solver.ipynb  simuthermique_solver.jl  solve_cranlnicolson.ipynb  with_weatherdata.ipynb
simuthermique/: date_and_time.py  material.py  model_graph.py  solar_collector.py  utils.py
tests/: test_date_and_time.py  test_solar_collector.py  test_utils.py
th_solver/: SimuThermiqueSolver_src.jl  solver_python.py  test_solver_python.ipynb  test_solver_python.py
(+114 files in other folders)
