[build-system]
requires = ["setuptools"]

[project]
name = "simuthermique"
description = "Dynamic Thermal Circuit Modeling"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["model", "thermal"]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "black",
    "pytest",
    "pysolar",
    "pyyaml",

]
dynamic = ["version"]

[tool.setuptools]
packages = ["simuthermique", "pythsolver"]